--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("logo/background_picture.png");
+  background-image: url("https://i.gifer.com/GRoj.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
