--- a/auto_style.css
+++ b/auto_style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("logo/2.gif");
+  background-image: url("logo/3.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -35,7 +35,7 @@ body {
 }
 
 .bubble:hover {
-  background-color: #fff !important;
+  background-color: #39ff15 !important;
   transition: background-color 0.2s ease;
   z-index: 2;
 }
@@ -95,7 +95,7 @@ body {
 /*category 1*/
 
 #bubble1 {
-  background-color: #a3dfcd;
+  background-color: #BEFCFF;
   transform: translate(-400px,-125px) rotate(0deg);
 }
 
@@ -105,34 +105,34 @@ body {
 }
 
 #EPFLCourses {
-  background-color: #a3dfcd;
+  background-color: #BEFCFF;
   transform: translate(0px, -120px ) rotate(0deg);
 }
 
 #CSAWClimateSustainabilityActionWeek {
-  background-color: #a3dfcd;
+  background-color: #BEFCFF;
   transform: translate(-114px, -37px ) rotate(0deg);
 }
 
 #Fresqueduclimat {
-  background-color: #a3dfcd;
+  background-color: #BEFCFF;
   transform: translate(-71px, 97px ) rotate(0deg);
 }
 
 #lecanardhuppé {
-  background-color: #a3dfcd;
+  background-color: #BEFCFF;
   transform: translate(71px, 97px ) rotate(0deg);
 }
 
 #Semainedeladurabilité {
-  background-color: #a3dfcd;
+  background-color: #BEFCFF;
   transform: translate(114px, -37px ) rotate(0deg);
 }
 
 /*category 2*/
 
 #bubble2 {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(-200px,125px) rotate(0deg);
 }
 
@@ -142,64 +142,64 @@ body {
 }
 
 #CoachingSustainability {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(0px, -120px ) rotate(0deg);
 }
 
 #associationdébouchésdurables {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(-65px, -101px ) rotate(0deg);
 }
 
 #Slowtacarrière {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(-109px, -50px ) rotate(0deg);
 }
 
 #Pointvélo {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(-119px, 17px ) rotate(0deg);
 }
 
 #Bibliothèqued’objets {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(-91px, 79px ) rotate(0deg);
 }
 
 #Fixn’ReplaceRepaircafé {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(-34px, 115px ) rotate(0deg);
 }
 
 #EpiceriecoopérativeleVorace {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(34px, 115px ) rotate(0deg);
 }
 
 #MarchéEPFL {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(91px, 79px ) rotate(0deg);
 }
 
 #PointSmartCellphones {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(119px, 17px ) rotate(0deg);
 }
 
 #Meubléco {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(109px, -50px ) rotate(0deg);
 }
 
 #CastorFreegan {
-  background-color: #a3dfcd;
+  background-color: #DEFFFA;
   transform: translate(65px, -101px ) rotate(0deg);
 }
 
 /*category 3*/
 
 #bubble3 {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(0px,-125px) rotate(0deg);
 }
 
@@ -209,64 +209,64 @@ body {
 }
 
 #LaConvergence {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(0px, -120px ) rotate(0deg);
 }
 
 #Unipoly {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(-65px, -101px ) rotate(0deg);
 }
 
 #ZeroEmissionGroup {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(-109px, -50px ) rotate(0deg);
 }
 
 #Ingénieur·esdumonde {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(-119px, 17px ) rotate(0deg);
 }
 
 #Polyquity {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(-91px, 79px ) rotate(0deg);
 }
 
 #PlanQueer {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(-34px, 115px ) rotate(0deg);
 }
 
 #Queermanence {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(34px, 115px ) rotate(0deg);
 }
 
 #AmnestydesHautesEcolesLausannoises {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(91px, 79px ) rotate(0deg);
 }
 
 #Associationdesétudiant·esvégan·esetanimalistes {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(119px, 17px ) rotate(0deg);
 }
 
 #FermedeBassenges {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(109px, -50px ) rotate(0deg);
 }
 
 #ThriftstoreUPFashionLab {
-  background-color: #a3dfcd;
+  background-color: #FFDAF5;
   transform: translate(65px, -101px ) rotate(0deg);
 }
 
 /*category 4*/
 
 #bubble4 {
-  background-color: #a3dfcd;
+  background-color: #B0E1FF;
   transform: translate(200px,125px) rotate(0deg);
 }
 
@@ -276,34 +276,34 @@ body {
 }
 
 #Make {
-  background-color: #a3dfcd;
+  background-color: #B0E1FF;
   transform: translate(0px, -120px ) rotate(0deg);
 }
 
 #Durabilis {
-  background-color: #a3dfcd;
+  background-color: #B0E1FF;
   transform: translate(-114px, -37px ) rotate(0deg);
 }
 
 #Skil {
-  background-color: #a3dfcd;
+  background-color: #B0E1FF;
   transform: translate(-71px, 97px ) rotate(0deg);
 }
 
 #EPFLChangemakers {
-  background-color: #a3dfcd;
+  background-color: #B0E1FF;
   transform: translate(71px, 97px ) rotate(0deg);
 }
 
 #Ucreate {
-  background-color: #a3dfcd;
+  background-color: #B0E1FF;
   transform: translate(114px, -37px ) rotate(0deg);
 }
 
 /*category 5*/
 
 #bubble5 {
-  background-color: #a3dfcd;
+  background-color: #E6C6FF;
   transform: translate(400px,-125px) rotate(0deg);
 }
 
@@ -313,26 +313,26 @@ body {
 }
 
 #SportscenterEPFL-UNIL {
-  background-color: #a3dfcd;
+  background-color: #E6C6FF;
   transform: translate(0px, -120px ) rotate(0deg);
 }
 
 #Espace-Transitions {
-  background-color: #a3dfcd;
+  background-color: #E6C6FF;
   transform: translate(-114px, -37px ) rotate(0deg);
 }
 
 #TrustandSupportNetworkTSN {
-  background-color: #a3dfcd;
+  background-color: #E6C6FF;
   transform: translate(-71px, 97px ) rotate(0deg);
 }
 
 #Guidedmeditation {
-  background-color: #a3dfcd;
+  background-color: #E6C6FF;
   transform: translate(71px, 97px ) rotate(0deg);
 }
 
 #ForêtdeDorigny {
-  background-color: #a3dfcd;
+  background-color: #E6C6FF;
   transform: translate(114px, -37px ) rotate(0deg);
 }
