--- a/auto_style.css
+++ b/auto_style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("logo/3.gif");
+  background-image: url("https://i.gifer.com/GRoj.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -14,8 +14,8 @@ body {
 
 .bubble {
   position: absolute;
-  width: 180px;
-  height: 180px;
+  width: 170px;
+  height: 170px;
   border-radius: 50%;
   cursor: pointer;
   display: flex;
@@ -41,8 +41,8 @@ body {
 }
 
 .smaller {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
