--- a/auto_style.css
+++ b/auto_style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://i.gifer.com/GRoj.gif");
+  background-image: url("logo/3.gif");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
