--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ body {
   overflow: hidden;
 }
 
+.circle-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .bubble {
   position: absolute;
   width: 180px;
@@ -75,7 +84,7 @@ body {
   visibility: hidden;
   opacity: 0; 
   z-index: 1; 
-  text-align: justify;
+  text-align: left;
   transition: opacity 0.2s ease;
 }
 
