--- a/auto_style.css
+++ b/auto_style.css
@@ -27,6 +27,7 @@ body {
 .bubble img {
   max-width: 70%;
   max-height: 60%;
+  border-radius: 50%;
   object-fit: contain;
 }
 
@@ -42,8 +43,8 @@ body {
 }
 
 .smaller {
-  width: 95px;
-  height: 95px;
+  width: 80px;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,7 +60,7 @@ body {
 }
 
 .smaller img {
-  max-width:70%;
+  max-width:100%;
   max-height: 70%;
   object-fit: contain;
 }
