--- a/style.css
+++ b/style.css
@@ -1,23 +1,39 @@
 body {
+  /*
   background-image: url("https://img.freepik.com/premium-photo/colorful-background-banner-template-decorative-design-layout-your-ideas-with-space-text_7954-6875.jpg?w=360");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  background-attachment: fixed;
+  background-attachment: fixed;*/
+  background-color: #ffffc5;
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  overflow: hidden;
+  height: 200vh;
+  flex-direction: column;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-.container {
+
+.intro-container {
+  background-color: #0eb521;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  width: 100%;
+  height: 50%;
+  scroll-snap-type: y proximity;
+}
+
+.bubbles-container {
+  background-color: #ffffc5;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 50%;
+  scroll-snap-type: y proximity;
 }
 
 .bubble {
