--- a/style.css
+++ b/style.css
@@ -16,24 +16,30 @@ body {
   overflow-x: hidden;
 }
 
+html {
+  scroll-snap-type: y mandatory;
+}
 
-.intro-container {
+.container {
+  width: 100%;
+  height: 50%;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
+}
+
+#intro {
   background-color: #0eb521;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   width: 100%;
   height: 50%;
-  scroll-snap-type: y mandatory;
 }
 
-.bubbles-container {
+#content {
   background-color: #ffffc5;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 50%;
-  scroll-snap-type: y mandatory;
 }
 
 .bubble {
