--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ html {
 }
 
 #intro {
-  background-color: #00A79F;
+  /*background-color: #00A79F;*/
+  background-image: linear-gradient( #007480, #ffffc5);
 }
 .banner {
   position: absolute;
