--- a/style.css
+++ b/style.css
@@ -100,12 +100,13 @@ html {
 }
 
 .bubble img {
-  max-width: 70%;
-  max-height: 60%;
+  max-width: 50%;
+  max-height: 40%;
   object-fit: contain;
 }
 
 .bubble span {
+  font-size: 20px;
   object-fit: contain;
 }
 
